...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLocationLayout"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCountryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgViewTrack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCountry"
            style="@style/WhiteBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country" />
    </com.google.android.material.textfield.TextInputLayout>

...
